# ml_algorithms_from_scratch

./: README.md  pyproject.toml
data/: README.md
notebooks/: config.py  data_mfeat_pix.ipynb  linear_classifier.ipynb  mlp.ipynb
